# fastapp

./: Dockerfile  README.md  alembic.ini  docker-compose-ci.yaml  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
api/: news.py  users.py
api/utils/: news.py  users.py
db/: db_setup.py
db/models/: user.py
pydantic_schemas/: news.py  user.py
