[tool.poetry]
name = "vtbhack"
version = "0.1.0"
description = ""
authors = ["Andrey.K <andrey-8991@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
SQLAlchemy-Utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
